--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.5.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
+  },
+  "volta": {
+    "node": "16.13.0",
+    "yarn": "1.22.19"
   }
 }
