--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-graphql": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "graphql": "^16.6.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.15.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -24,7 +28,9 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/client-preset": "1.2.1"
   },
   "volta": {
     "node": "16.13.0",
