--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "next": "13.0.5",
     "react": "18.2.0",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.15.0",
+    "@graphql-codegen/client-preset": "1.2.1",
+    "@graphql-codegen/introspection": "2.2.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -28,9 +31,7 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.3",
-    "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/client-preset": "1.2.1"
+    "typescript": "4.9.3"
   },
   "volta": {
     "node": "16.13.0",
