--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.15.0",
     "@graphql-codegen/client-preset": "1.2.1",
     "@graphql-codegen/introspection": "2.2.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
