--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "next": "13.0.5",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
