--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@hookform/resolvers": "^2.9.11",
     "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "next": "13.0.5",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-markdown": "^8.0.5",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.15.0",
     "@graphql-codegen/client-preset": "1.2.1",
     "@graphql-codegen/introspection": "2.2.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
