--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^2.9.11",
+    "@stripe/react-stripe-js": "^2.0.0",
+    "@stripe/stripe-js": "^1.50.0",
     "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "next": "13.0.5",
@@ -22,7 +24,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-markdown": "^8.0.5",
+    "react-query": "^3.39.3",
     "sharp": "^0.31.2",
+    "stripe": "^11.15.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
